svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webtest
  name: webtest
spec:
  ports:
  - name: 9080-tcp
    port: 9080
    protocol: TCP
    targetPort: 9080
  - name: 9443-tcp
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app: webtest
  sessionAffinity: None
  type: ClusterIP
