route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: webtest
  name: webtest
spec:
  host: webtest-test.apps-crc.testing
  port:
    targetPort: 9080-tcp
  to:
    kind: Service
    name: webtest
    weight: 100
  wildcardPolicy: None
